// Copyright 2025 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.bq;

import "go.chromium.org/luci/common/bq/pb/options.proto";

import "go.chromium.org/luci/resultdb/proto/v1/test_metadata.proto";

option go_package = "go.chromium.org/luci/analysis/proto/bq;bqpb";

// Mirrors luci.resultdb.v1.TestMetadata, but adaopted for BigQuery export.
// This means any structpb occurrences are replaced by string.
message TestMetadata {
  // The original test name.
  // This is useful for users who are familiar with the underlying test harness
  // and want to re-run the test outside of the CI system.
  string name = 1;

  // Where the test is defined, e.g. the file name.
  // location.repo MUST be specified.
  luci.resultdb.v1.TestLocation location = 2;

  // The issue tracker component associated with the test, if any.
  // Bugs related to the test may be filed here.
  luci.resultdb.v1.BugComponent bug_component = 3;

  // Identifies the schema of the JSON object in the properties field.
  // Use the fully-qualified name of the source protocol buffer.
  // eg. chromiumos.test.api.TestCaseInfo
  // ResultDB will *not* validate the properties field with respect to this
  // schema. Downstream systems may however use this field to inform how the
  // properties field is interpreted.
  string properties_schema = 4;

  // Arbitrary JSON object that contains structured, domain-specific properties
  // of the test.
  //
  // The serialized size must be <= 4096 bytes.
  //
  // If this field is specified, properties_schema must also be specified.
  string properties = 5 [(bqschema.options).bq_type = "JSON"];

  // The test ID this test previously had.
  string previous_test_id = 6;
}
